# yconfig

./: CMakeLists.txt  FindYamlCpp.cmake  LICENSE  README.md
include/: Config.h
src/: Config.cpp
tests/: configtest.cpp  configtest1.yaml  configtest2.yaml  configtest3.yaml
